fact:app.js created & questions and answers added with fs module to create readme file

--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "readme-generator",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "generate": "node app.js"
   },
   "keywords": [],
   "author": "",
