--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "readme-generator",
+  "name": "basic-readme-generator",
   "version": "1.0.0",
-  "description": "",
+  "description": "A command-line interface (CLI) tool for generating a simple README file for your project.",
   "main": "app.js",
   "type": "module",
   "scripts": {
@@ -10,7 +10,7 @@
     "generate": "node app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "festuscode",
   "license": "ISC",
   "dependencies": {
     "inquirer": "^9.1.4"
